a1/brendan_gordon/TEST_PROGRAMS/invalidtype/alexandre_st-louis_fortier/005-mul-incompatible-type.min
print "allo" * "comment ca va";

